<resources>
    <string name="app_name">约酒啦</string>
    <string name="right_tag">RIGHT</string>
    <string name="left_tag">LEFT</string>
    <string name="quite">再按一次退出</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="is_dengluing">正在登陆...</string>
    <string name="album_all">All Photos</string>
    <string name="check_is_picture">请先选择要发布的图片</string>
    <string name="commetn_isnull">就没啥想说的？</string>
    <string name="pk_cont_length">内容太多了，1000字以内</string>
    <string name="sd_card_is_in">请检查是否安装内存卡</string>
    <string name="network_in">请检查网络连接</string>
    <string name="publishgoods_error_one">商品名称不能为空</string>
    <string name="publishgoods_error_two">商品名称超出字段，最多20字</string>
    <string name="publishgoods_error_three">商品介绍不能为空</string>
    <string name="publishgoods_error_four">商品介绍超出字段，最多200字</string>
    <string name="publishgoods_error_five">商品价格不能为空</string>
    <string name="publishgoods_error_six">商品价格超出字段，最大7位</string>
    <string name="publishgoods_error_seven">选择商品分类</string>
    <string name="publishgoods_error_eight">您不是商家用户，请选择二手市场发布信息</string>
    <string name="publishgoods_error_nine">商品地址不能为空</string>
    <string name="publishgoods_error_ten">商品地址超出字段</string>
    <string name="publishgoods_error_evelen">商品联系人不能为空</string>
    <string name="publishgoods_error_twelve">商品联系人超出字段</string>
    <string name="publishgoods_error_thirty">商品电话不能为空</string>
    <string name="publishgoods_error_fourty">商品电话超出字段</string>
    <string name="publishpart_error_one">招募标题不能为空</string>
    <string name="publishpart_error_onetwo">招募标题字段超出限制</string>
    <string name="publishpart_error_two">招募人数不能为空</string>
    <string name="publishpart_error_twotwo">招募人数字段超出限制</string>
    <string name="publishpart_error_three">薪酬待遇不能为空</string>
    <string name="publishpart_error_threetwo">薪金字段超出限制</string>
    <string name="publishpart_error_four">招聘人数不能为空</string>
    <string name="publishpart_error_fourtwo">招聘人数字段超出限制，100字符以内</string>
    <string name="publishpart_error_fourthree">联系人不能为空</string>
    <string name="publishpart_error_fourthreetwo">联系人超出字段</string>
    <string name="publishpart_error_five">电话不能为空</string>
    <string name="publishpart_error_fivetwo">电话字段超出限制</string>
    <string name="publishpart_error_six">地址不能为空</string>
    <string name="publishpart_error_sixtwo">地址字段超出限制</string>
    <string name="publishpart_error_seven">内容不能为空</string>
    <string name="publishpart_error_seventwo">内容字段超出限制</string>
    <string name="publishpart_error_eight">QQ不能为空</string>
    <string name="publishpart_error_eighttwo">QQ字段超出限制</string>
    <string name="publishpart_error_night">选择类别</string>
    <string name="register_error_one">"请输入手机号"</string>
    <string name="register_error_two">""手机号格式不正确""</string>
    <string name="register_error_three">"请输入验证码"</string>
    <string name="register_error_four">"请输入昵称"</string>
    <string name="register_error_five">"验证码已发送到手机"</string>
    <string name="register_error_six">"验证码发送失败"</string>
    <string name="register_error_seven">"验证码不匹配"</string>
    <string name="register_error_eight">"验证码验证失败"</string>
    <string name="register_error_night">"该手机没有获得验证码"</string>
    <string name="register_error_night_one">"该手机已经注册，请直接登陆"</string>
    <string name="register_error_ten">"该昵称可用"</string>
    <string name="register_error_eleven">"该昵称已经有人注册了"</string>
    <string name="register_error_twelve">"昵称验证失败"</string>
    <string name="register_error_school">"请选择圈子"</string>
    <string name="register_regist">"重新验证"</string>
    <string name="delete_success">"删除成功"</string>
    <string name="delete_error">"删除失败，请稍后重试"</string>
    <string name="get_data_error">"获得数据失败，请稍后重试"</string>
    <string name="zan_success">"点赞成功"</string>
    <string name="zan_error_one">"已经赞过"</string>
    <string name="zan_error_two">"点赞失败，请稍后重试"</string>
    <string name="login_error_one">"请输入账号"</string>
    <string name="login_error_two">"请输入密码"</string>
    <string name="login_error_twotwo">"请再次输入密码"</string>
    <string name="login_error_three">"登陆失败，无此人"</string>
    <string name="login_error_four">"登陆失败，密码错误"</string>
    <string name="login_error_five">"您有操作违反相关规定，关禁闭中，望珍重"</string>
    <string name="login_error_six">"登陆失败，请稍后重试"</string>
    <string name="comment_success">"评论成功"</string>
    <string name="comment_error_one">"评论失败，请稍后重试"</string>
    <string name="please_wait">"请稍后"</string>
    <string name="publish_error_one">"发布失败"</string>
    <string name="publish_error_two">"网络异常，稍后重试"</string>
    <string name="publish_success">"发布成功"</string>
    <string name="publish_error_three">"已经发布过参赛作品"</string>
    <string name="file_is_error">"文件为空"</string>
    <string name="video_error">"请先录制视频"</string>
    <string name="register_error_thirty">"注册失败"</string>
    <string name="register_error_thirtyone">"网络注册失败"</string>
    <string name="register_error_thirtytwo">"该手机号已注册，请直接登陆"</string>
    <string name="register_error_fourty">"注册失败，请稍后重试"</string>
    <string name="please_write_pwr">"请输入密码"</string>
    <string name="pwr_between">"密码在6到18位之间"</string>
    <string name="pwr_error_two">"请再次输入密码"</string>
    <string name="pwr_error_three">"两次输入密码不一致"</string>
    <string name="findpwr_error_one">"该手机还没有注册"</string>
    <string name="findpwr_error_two">"重置密码失败"</string>
    <string name="findpwr_success">"找回密码成功，请重新登录"</string>
    <string name="update_error_one">"昵称不能为空"</string>
    <string name="update_error_oneone">"昵称超出字段限制"</string>
    <string name="update_error_two">"性别不能为空"</string>
    <string name="update_error_three">"性别输入有误"</string>
    <string name="update_error_four">"签名字段超出限制"</string>
    <string name="update_error_five">"QQ字段超出限制"</string>
    <string name="update_success">"更新成功"</string>
    <string name="report_answer">"请简要描述举报原因"</string>
    <string name="report_success">"举报成功，请等待管理员审核"</string>
    <string name="report_error_one">"举报失败"</string>
    <string name="report_error_oneone">"操作失败，已经有其他管理员处理该信息"</string>
    <string name="report_error_two">"操作失败，请稍后重试"</string>
    <string name="report_error_twoone">"该会员已经是您的商家"</string>
    <string name="report_error_three">"请填写关禁闭时间"</string>
    <string name="report_error_four">"请填写积分"</string>
    <string name="report_error_start_time">"请选择开始时间"</string>
    <string name="report_error_end_time">"请选择结束时间"</string>
    <string name="report_done_success">操作成功</string>
    <string name="update_top_done_success">置顶成功</string>
    <string name="update_cancle_top_success">取消置顶成功</string>
    <string name="check_new_version">检查中...</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="yanzheng_xinxi">请输入验证信息</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此房间信息</string>
    <string name="dissolution_group_hint">退出后，此房间将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">兴趣好友</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">房间</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建房间</string>
    <string name="group_name">房间名称</string>
    <string name="Group_chat_profile">房间简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放房间成员邀请</string>
    <string name="Open_group_chat">公开的房间</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽房间消息</string>
    <string name="The_dissolution_of_chatting">解散房间</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">房间资料</string>
    <string name="Group_of_Lord">房间主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入房间</string>
    <string name="login">登陆</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">房间:</string>
    <string name="not_download">未下载:</string>
</resources>