<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_top_bar"
            android:background="@drawable/global_top_background"
            android:gravity="center_vertical">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:id="@+id/set_return"
                android:paddingLeft="10dp"
                android:src="@drawable/back"
                android:paddingRight="10dp"/>
        <TextView
                android:id="@+id/message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/chatset"
                android:textColor="@color/title_font_main"
                android:textSize="18sp"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical">


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dip"
                        android:gravity="bottom|left"
                        android:paddingLeft="10dip"
                        android:layout_marginBottom="3dp"
                        android:text="@string/notify"
                        android:textColor="@color/btn_gray_pressed"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0.5dip"
                        android:background="@color/btn_gray_normal"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <RelativeLayout
                        android:id="@+id/rl_switch_notification"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/btn_bottom_selector"
                        android:padding="10dip">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10dip"
                            android:text="@string/newnotify"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:typeface="serif"/>

                    <ImageView
                            android:id="@+id/iv_switch_open_notification"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_open"
                            android:visibility="visible"/>

                    <ImageView
                            android:id="@+id/iv_switch_close_notification"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_close"
                            android:visibility="invisible"/>
                </RelativeLayout>

                <TextView
                        android:id="@+id/textview1"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@color/btn_gray_normal"/>

                <RelativeLayout
                        android:id="@+id/rl_switch_sound"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/btn_bottom_selector"
                        android:padding="10dip">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10dip"
                            android:text="@string/voice"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:typeface="serif"/>

                    <ImageView
                            android:id="@+id/iv_switch_open_sound"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_open"
                            android:visibility="visible"/>

                    <ImageView
                            android:id="@+id/iv_switch_close_sound"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_close"
                            android:visibility="invisible"/>
                </RelativeLayout>

                <TextView
                        android:id="@+id/textview2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@color/btn_gray_normal"/>

                <RelativeLayout
                        android:id="@+id/rl_switch_vibrate"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/btn_bottom_selector"
                        android:padding="10dip">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10dip"
                            android:text="@string/shake"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:typeface="serif"/>

                    <ImageView
                            android:id="@+id/iv_switch_open_vibrate"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_open"
                            android:visibility="visible"/>

                    <ImageView
                            android:id="@+id/iv_switch_close_vibrate"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_close"
                            android:visibility="invisible"/>
                </RelativeLayout>
                <TextView
                        android:id="@+id/textview3"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dip"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@color/btn_gray_normal"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="10dip"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dip"
                            android:gravity="bottom|left"
                            android:paddingLeft="10dip"
                            android:text="@string/chatset"
                            android:layout_marginBottom="3dp"
                            android:textColor="@color/btn_gray_pressed"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0.5dip"
                            android:background="@color/btn_gray_normal"/>
                </LinearLayout>

                <RelativeLayout
                        android:id="@+id/rl_switch_speaker"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/btn_bottom_selector"
                        android:padding="10dip">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10dip"
                            android:text="@string/yangshengqi"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:typeface="serif"/>

                    <ImageView
                            android:id="@+id/iv_switch_open_speaker"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_open"
                            android:visibility="visible"/>

                    <ImageView
                            android:id="@+id/iv_switch_close_speaker"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_switch_close"
                            android:visibility="invisible"/>
                </RelativeLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/btn_gray_normal"/>

                <LinearLayout
                        android:id="@+id/ll_black_list"
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:background="@drawable/btn_bottom_selector"
                        android:padding="10dip">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="10dip"
                            android:text="@string/book_black"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"/>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/btn_gray_normal"/>

            </LinearLayout>

            <!--
                 <TextView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="#E6E6E6" />
            -->


        </LinearLayout>
    </ScrollView>

</LinearLayout>